// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container DeleteResource should render with proper resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "className": "btn-inverse",
      "componentId": "dialog:delete:cancel",
      "label": "CANCEL",
      "model": Object {
        "collectionId": undefined,
        "found": true,
        "id": undefined,
        "label": "myLabel",
        "redirectUrl": undefined,
        "resourceType": "myResourceType",
        "resourceTypeLabel": "resourceLabel",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#cancel",
    }
  }
  getComponent={undefined}
  header="My header title"
  show={true}
  validateAction={
    Object {
      "bsStyle": "danger",
      "componentId": "dialog:delete:validate",
      "label": "REMOVE",
      "model": Object {
        "collectionId": undefined,
        "found": true,
        "id": undefined,
        "label": "myLabel",
        "redirectUrl": undefined,
        "resourceType": "myResourceType",
        "resourceTypeLabel": "resourceLabel",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#validate",
    }
  }
>
  <div>
    Are you sure you want to remove the resourceLabel
     
    <strong>
      myLabel
    </strong>
    ?
  </div>
</ConfirmDialog>
`;

exports[`Container DeleteResource should render with wrong resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "className": "btn-inverse",
      "componentId": "dialog:delete:cancel",
      "label": "CANCEL",
      "model": Object {
        "collectionId": undefined,
        "found": false,
        "id": undefined,
        "label": "",
        "redirectUrl": undefined,
        "resourceType": "unknownResourceType",
        "resourceTypeLabel": "unknownResourceType",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#cancel",
    }
  }
  getComponent={undefined}
  header="My header title"
  show={true}
  validateAction={
    Object {
      "bsStyle": "danger",
      "componentId": "dialog:delete:validate",
      "label": "REMOVE",
      "model": Object {
        "collectionId": undefined,
        "found": false,
        "id": undefined,
        "label": "",
        "redirectUrl": undefined,
        "resourceType": "unknownResourceType",
        "resourceTypeLabel": "unknownResourceType",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#validate",
    }
  }
>
  <div>
    Are you sure you want to remove the unknownResourceType
     
    <strong />
    ?
  </div>
</ConfirmDialog>
`;
